--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 flask==2.2.3
 flask-socketio==5.3.2
+flask-cors==6.0.0
 eventlet==0.33.3
 python-dotenv==1.0.0
 numpy==1.24.2
@@ -15,3 +16,5 @@ markupsafe==2.1.2
 bidict==0.22.1
 python-engineio==4.4.1
 python-socketio==5.8.0
+gunicorn==20.1.0
+psutil==5.9.5
